<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    tools:context="com.example.android.streetfighter.MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:padding="@dimen/pad"
        android:text="@string/title"
        android:textAllCaps="true"
        android:textSize="@dimen/large_text" />

    <ImageView
        android:id="@+id/picture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:src="@drawable/background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/reset"
        android:layout_centerHorizontal="true"
        android:background="@color/colorPrimaryLight"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/player1"
                android:textSize="@dimen/large_text" />

            <TextView
                android:id="@+id/player_one_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/initial_score"
                android:textSize="@dimen/large_text" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:onClick="addOneForPlayerOne"
                android:text="@string/one_point"
                android:textSize="@dimen/standard_text" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:onClick="addTwoForPlayerOne"
                android:text="@string/two_points"
                android:textSize="@dimen/standard_text" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:onClick="addThreeForPlayerOne"
                android:text="@string/three_points"
                android:textSize="@dimen/standard_text" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/player2"
                android:textSize="@dimen/large_text" />

            <TextView
                android:id="@+id/player_two_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/initial_score"
                android:textSize="@dimen/large_text" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:onClick="addOneForPlayerTwo"
                android:text="@string/one_point"
                android:textSize="@dimen/standard_text" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:onClick="addTwoForPlayerTwo"
                android:text="@string/two_points"
                android:textSize="@dimen/standard_text" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:onClick="addThreeForPlayerTwo"
                android:text="@string/three_points"
                android:textSize="@dimen/standard_text" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/pad"
        android:onClick="reset"
        android:text="@string/reset"
        android:textSize="@dimen/standard_text" />

</RelativeLayout>
